--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li>C#</li>
         <li>iOS Family</li>
         <li>Perl</li>
+        <li>Visual Basic</li>
         <li>and PHP</li></ul>
         <li>It looks awesome, like it came from the future</li>
         <li>You look like a savage when you wear it</li>
